--- a/Makefile.in
+++ b/Makefile.in
@@ -4,6 +4,7 @@ BIN_DIRS=	\
 	guilib/common \
 	guilib/tinyXML \
 	xbmc \
+	xbmc/addons \
 	xbmc/cdrip \
 	xbmc/cores \
 	xbmc/cores/DllLoader \
@@ -95,7 +96,7 @@ LIB_DIRS=\
 	xbmc/lib/libid3tag \
 	xbmc/lib/libapetag \
 	xbmc/lib/libPython/linux \
-	lib/libcpluff \
+	lib/cpluff \
 	lib/libmodplug \
 	lib/xbmc-dll-symbols \
 	lib/jsoncpp/jsoncpp/src/lib_json
