--- a/project/VS2008Express/XBMC.vcproj
+++ b/project/VS2008Express/XBMC.vcproj
@@ -2406,28 +2406,12 @@
 						>
 					</File>
 					<File
-						RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\DsSubtitleManager.cpp"
+						RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\DSSubtitleManager.cpp"
 						>
-						<FileConfiguration
-							Name="Debug (DirectX)|Win32"
-							ExcludedFromBuild="true"
-							>
-							<Tool
-								Name="VCCLCompilerTool"
-							/>
-						</FileConfiguration>
 					</File>
 					<File
 						RelativePath="..\..\xbmc\cores\DSPlayer\Subtitles\DsSubtitleManager.h"
 						>
-						<FileConfiguration
-							Name="Debug (DirectX)|Win32"
-							ExcludedFromBuild="true"
-							>
-							<Tool
-								Name="VCCustomBuildTool"
-							/>
-						</FileConfiguration>
 					</File>
 					<Filter
 						Name="Source"
